<resources>
    <string name="app_name">messengerAndroid</string>

    <!-- MainActivity -->
    <string name="Name">Dart Murzikus</string>
    <string name="settings">Settings</string>
    <string name="job">Graphic Designer</string>
    <string name="home_address">Home address</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="edit_profile">Edit profile</string>
    <string name="userPhoto">userPhoto</string>
    <string name="fill_out_profile">Go to settings and fill out the profile</string>

    <!-- SignUp activity-->
    <string name="get_acquainted">Let\'s get acquainted</string>
    <string name="fill_text_invite">Fill out the profile and go to the application!</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="google" translatable="false">GOOGLE</string>
    <string name="or">or</string>
    <string name="register">REGISTER</string>
    <string name="agree">By clicking Register you agree to our Terms\nand Conditions</string>
    <string name="agree_land">By clicking Register you agree to our Terms and Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="invalid_password">Minimum eight characters, at least one uppercase letter, one lowercase letter and one number</string>
    <string name="invalid_email">Invalid e-mail</string>

    <!-- myContacts activity -->
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add contact</string>


    <!-- addContact part -->
    <string name="enter_name_hint">Enter name</string>
    <string name="enter_job_hint">Enter job</string>
    <string name="name">name</string>

    <!-- deletion alert dialog string -->
    <string name="default_deletion_dialog_title">Contact deletion</string>
    <string name="default_deletion_dialog_message">Do you really want to delete this contact?</string>
    <!-- snackBar after deletion contact-->
    <string name="deletion_snackbar_message">User has been deleted</string>
    <string name="undo_delete_action">Undo</string>
    <!-- Add contact alert dialog -->
    <string name="add_contact_title">Add contact</string>

    <!-- universal strings for all alert dialogs-->
    <string name="action_confirmed">Confirm</string>
    <string name="action_cancelled">Cancel</string>
    <string name="action_grant_permission">Grant permission</string>
    <string name="action_deny_permission">Hardcoded list</string>

    <string name="toast_cancelled_deletion">Deletion has cancelled</string>
    <!--string for permission dialog-->
    <string name="opss">Opss..</string>
    <string name="permission_denied_button">Permission denied</string>
    <string name="reasonable_permission_text">You need to confirm permission to import your contacts into app\nWe dont collect your personal data. If you dont want to share your contact, app will show hardcoded list</string>
    <string name="apply_permission">Apply permission</string>
    <string name="add_photo">Add photo</string>
    <string name="sign_out">Sign out</string>
    <string name="fetch_phone_contacts">fetch phone contacts</string>
    <string name="default_phone_number" translatable="false">777-777-777-777</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_postal_address">Enter postal address</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="select_all">Select all</string>
    <string name="forward">forward</string>
    <string name="your_profile_data">Your profile data</string>
    <string name="subheader_text">Fill out the profile and go to the application!</string>
    <string name="user_name">User name</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="no_results_found">No results found</string>
    <string name="no_result_explanation">You can see more contacts in recommendation</string>
    <string name="error_please_try_again">Error! Please, try again</string>

    <string name="try_again_button">try again</string>
    <string name="email_already_exists">This email already exists</string>
    <string name="connection_error" translatable="false">Please check your internet connection</string>
    <string name="backend_error" translatable="false">backend exception</string>
    <string name="parse_backend_error" translatable="false">parse backend exception</string>
    <!-- Strings used for fragments for navigation -->



</resources>