<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opss"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="@dimen/biggestFontSize"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_denied_button"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/bigMargin"
        android:textSize="@dimen/largeFontSize"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reasonable_permission_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/mediumFontSize"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bigMargin"
        android:gravity="center"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTextAppearance.SecondaryBottomButton"
            android:layout_gravity="center"
            android:text="@string/action_deny_permission"
            android:layout_marginEnd="@dimen/very_big_margin"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonGrantPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTextAppearance.SecondaryBottomButton"
            android:layout_gravity="center"
            android:text="@string/apply_permission"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>