<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/viewUpperBlock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSetting"
        style="@style/defaultTextView"
        android:textAppearance="@style/MyTextAppearance.Headline"

        android:layout_marginStart="@dimen/settings_margin"
        android:layout_marginTop="@dimen/settings_margin"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageButtonPicture"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@string/userPhoto"
        android:scaleType="centerCrop"
        android:src="@drawable/babyyoda"
        app:layout_constraintBottom_toTopOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        style="@style/defaultTextView"
        android:textAppearance="@style/MyTextAppearance.Headline2"

        android:text="@string/Name"

        android:layout_marginTop="@dimen/largeMargin"
        app:layout_constraintBottom_toBottomOf="@id/textViewJob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButtonPicture" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewJob"
        style="@style/defaultTextView"
        android:textAppearance="@style/MyTextAppearance.Body"

        android:text="@string/job"

        android:layout_marginTop="@dimen/smallMargin"
        app:layout_constraintBottom_toTopOf="@id/textViewAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAddress"
        style="@style/defaultTextView"
        android:textAppearance="@style/MyTextAppearance.Body"

        android:layout_marginTop="@dimen/mediumMargin"
        android:text="@string/home_address"
        app:layout_constraintBottom_toTopOf="@id/viewLowerBlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewJob" />

    <View
        android:id="@+id/viewLowerBlock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/backgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewUpperBlock" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageButtonFbLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_fb_logo"
        app:layout_constraintBottom_toBottomOf="@id/imageButtonLinkednLogo"
        app:layout_constraintEnd_toStartOf="@id/imageButtonLinkednLogo"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageButtonLinkednLogo" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageButtonLinkednLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_between_socials"
        android:layout_marginEnd="@dimen/margin_between_socials"
        android:background="@drawable/ic_linkedn_logo"
        app:layout_constraintBottom_toTopOf="@id/textViewFillProfile"
        app:layout_constraintEnd_toStartOf="@id/imageButtonInstLogo"
        app:layout_constraintStart_toEndOf="@id/imageButtonFbLogo"
        app:layout_constraintTop_toTopOf="@id/viewLowerBlock" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageButtonInstLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_inst_logo"
        app:layout_constraintBottom_toBottomOf="@id/imageButtonLinkednLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageButtonLinkednLogo"
        app:layout_constraintTop_toTopOf="@id/imageButtonLinkednLogo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewFillProfile"
        style="@style/defaultTextView"
        android:textAppearance="@style/MyTextAppearance.SecondaryBottomButton"

        android:text="@string/fill_out_profile"
        android:textSize="@dimen/smallFontSize"

        android:layout_margin="@dimen/mediumMargin"
        app:layout_constraintBottom_toTopOf="@id/ButtonEditProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ButtonEditProfile"
        style="@style/secondaryBottomButton"
        android:textAppearance="@style/MyTextAppearance.SecondaryBottomButton"

        android:text="@string/edit_profile"

        android:layout_margin="@dimen/mediumMargin"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/buttonContacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonContacts"
        style="@style/MainBottomButton"
        android:textAppearance="@style/MyTextAppearance.MainBottomButton"

        android:text="@string/view_my_contacts"

        android:layout_margin="@dimen/mediumMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>