<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_from_start"
    android:background="@color/default_color"
    android:padding="@dimen/SignUpPagePadding">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewGetAcquainted"
        style="@style/BigBrightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:text="@string/get_acquainted"
        app:layout_constraintBottom_toTopOf="@id/textViewSmallInvite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSmallInvite"
        style="@style/smallInfoText"
        android:textColor="@color/text_color"

        android:layout_marginBottom="@dimen/largeMargin"
        android:gravity="center"
        android:text="@string/fill_text_invite"
        app:layout_constraintBottom_toTopOf="@id/textViewEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewGetAcquainted" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_for_input"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/e_mail"
        android:textColor="@color/gray"
        android:textSize="@dimen/smallFontSize"
        app:layout_constraintBottom_toTopOf="@id/editTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSmallInvite" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:textColor="@color/white"
        android:textSize="@dimen/largeFontSize"
        app:layout_constraintBottom_toTopOf="@id/inputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@id/textViewEmail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintBottom_toTopOf="@id/checkBoxRememberMe">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/default_color"
            android:hint="@string/password"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            />



    </com.google.android.material.textfield.TextInputLayout>


<!--    <androidx.appcompat.widget.AppCompatTextView-->
<!--        android:id="@+id/textViewPassword"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="@dimen/margin_for_input"-->
<!--        android:layout_marginTop="@dimen/largeMargin"-->
<!--        android:fontFamily="@font/montserrat_regular"-->
<!--        android:text="@string/password"-->
<!--        android:textColor="@color/gray"-->
<!--        android:textSize="@dimen/smallFontSize"-->
<!--        app:layout_constraintBottom_toTopOf="@id/editTextPassword"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />-->

<!--    <androidx.appcompat.widget.AppCompatEditText-->
<!--        android:id="@+id/editTextPassword"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/gray"-->
<!--        android:inputType="textPassword"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="@dimen/largeFontSize"-->
<!--        app:layout_constraintBottom_toTopOf="@id/checkBoxRememberMe"-->
<!--        app:layout_constraintTop_toBottomOf="@id/textViewPassword" />-->

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBoxRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="@dimen/margin_for_input"
        android:layout_marginTop="@dimen/mediumMargin"
        android:button="@drawable/ic_radio_button_empty"
        android:buttonTint="@color/white"
        android:checked="false"
        android:paddingStart="@dimen/littlePadding"
        android:text="@string/remember_me"
        android:textColor="@color/gray"
        android:textSize="@dimen/smallFontSize"
        app:layout_constraintBottom_toTopOf="@id/buttonGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword" />

    <com.example.messengerAndroid.CustomGoogleButton
        android:id="@+id/buttonGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        app:layout_constraintBottom_toTopOf="@id/textViewOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="@dimen/mediumPlusFontSize"
        app:layout_constraintBottom_toTopOf="@id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonGoogle"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:background="@drawable/rounded_corner_and_stroke"
        android:fontFamily="@font/open_sans_bold"
        android:padding="@dimen/inner_button_padding"
        android:text="@string/register"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/textViewAgree"
        app:layout_constraintTop_toBottomOf="@id/textViewOr"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/agree"
        android:textColor="@color/text_color"
        android:textSize="@dimen/smallestFontSize"
        app:layout_constraintBottom_toTopOf="@id/textViewAlreadyHaveAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAlreadyHaveAcc"
        style="@style/smallInfoText"

        android:layout_marginEnd="@dimen/margin12dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textViewSignIn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAgree" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSignIn"
        style="@style/smallInfoText"
        android:textColor="@color/text_color"

        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="@id/textViewAlreadyHaveAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewAlreadyHaveAcc"
        app:layout_constraintTop_toTopOf="@id/textViewAlreadyHaveAcc" />
</androidx.constraintlayout.widget.ConstraintLayout>